<resources>
    <string name="app_name">Oysi</string>
    <string name="title_activity_maps">Map</string>
    <string name="nhietdo">°C</string>
    <string name="thoitiet">Thời tiết :</string>
    <string name="nhietdoCity">Nhiệt độ :</string>
    <string name="mucdoonhiem">Mức độ ô nhiễm :</string>
    <string name="AQI">AQI US</string>
    <string name="xemvitri">Xem vị trí</string>
    <string name="city">Thành Phố :</string>
    <string name="rank">Ranking</string>
    <string name="nothing">\"\"</string>
    <string name="List">List</string>
    <string name="VietNam">VietNam</string>
    <string name="Rank">Rank</string>
    <string name="signout">Sign out</string>

    <string name="link">
    <a href="https://shopee.vn">Get</a>
    </string>
    <string name="current_location">Vị trí hiện tại</string>
    <string name="vitri">Vị trí :</string>

    <string name="quality">Độ ô nhiễm :</string>
    <string name="chon">Hãy chọn 1 thành Phố</string>
    <string name="content">Hãy theo dõi không khí để đảm bảo an toàn cho sức khỏe của bạn.\nBạn đã có khẩu trang chưa? \nNếu chưa có hãy mua ngay!!</string>
    <string name="thanhpho">Thành phố</string>
    <string name="name">Tên :</string>
    <string name="email">Email :</string>
    <string name="noCity">Hiện đang chưa có thành phố nào. \\nHãy thêm thành phố bạn quan tâm để mọi \\nngười bình chọn nhé</string>

    //facebook
    <string name="facebook_app_id">595942491156871</string>
    <string name="fb_login_protocol_scheme">fb595942491156871</string>

    //color

    <string name="normal">#66fdd74b</string>
    <string name="good">#66a8e05f</string>
    <string name="notgood">#66fe9b57</string>
    <string name="danger">#66fe6a69</string>
    <string name="soimportant">#6684002c</string>
    <string name="careful">#66a87383</string>
    <string name="login">Login Facebook</string>
    <string name="binhchon">Bình chọn</string>
    <string name="find">Tìm kiếm</string>
    <string name="vote">Vote</string>
    <string name="city_state">Quận/huyện, Thành phố</string>
    <string name="count">Lượt bình chọn</string>
    <string name="country">Country</string>
    <string name="facebook">Facebook</string>
    <string name="air_good">good</string>
    <string name="air_normal">normal</string>
    <string name="air_not_good">not good</string>
    <string name="air_polluted">polluted</string>
    <string name="air_important">important</string>
    <string name="add_more_city">Thêm địa điểm quan tâm</string>
    <string name="quanhuyen">Quận huyện</string>
    <string name="quocgia">Quốc gia</string>
    <string name="add">Thêm</string>


</resources>
