<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin10"
        android:text="@string/add_more_city" />

    <EditText
        android:id="@+id/edtCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quanhuyen"
        android:imeOptions="actionNext"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edtState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:imeOptions="actionNext"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edtCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quocgia"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/size_24"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginRight="@dimen/size_24"
        android:background="@drawable/button_facebook"
        android:text="@string/add"
        android:textColor="@color/colorWhite" />

</LinearLayout>