<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MapsActivity" >


    <fragment
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintLeft_toLeftOf="parent"
        map:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <FrameLayout
        android:id="@+id/frame_dialog"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_48"
        android:layout_marginRight="@dimen/size_48"
/>
    <LinearLayout
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="100" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="150" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="10dp"
                android:background="@color/goodH" />

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="10dp"
                android:background="@color/normalH" />

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="10dp"
                android:background="@color/notgoodH" />

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="10dp"
                android:background="@color/polluted" />

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="10dp"
                android:background="@color/importantH" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/air_good" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:text="@string/air_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/air_not_good" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/air_polluted" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_important" />
        </LinearLayout>

    </LinearLayout>


    <com.wang.avi.AVLoadingIndicatorView
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintLeft_toLeftOf="parent"
        map:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        style="@style/AVLoadingIndicatorView"
        map:indicatorColor="@color/orangeAgent"
        map:indicatorName="LineSpinFadeLoaderIndicator"
        android:id="@+id/progress_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:tint="@color/polluted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_my_location_black_24dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/margin10"
        android:layout_marginBottom="@dimen/margin10"/>

</androidx.constraintlayout.widget.ConstraintLayout>